[package]
name = "babyjubjub-rs"
version = "0.0.3"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-rs"
readme = "README.md"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
num = "0.2.0"
num-bigint = {version = "0.2.2", features = ["rand"]}
num-traits = "0.2.8"
blake2 = "0.8"
generic-array = "0.13.2"
tiny-keccak = "1.5"
rustc-hex = "1.0.0"
mimc-rs = "0.0.2"
poseidon-rs = "0.0.1"
arrayref = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_babyjubjub"
harness = false

