[package]
name = "babyjubjub-rs"
version = "0.0.10"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-rs"
readme = "README.md"

[dependencies]
ff = {package="ff_ce", version= "0.11", features = ["derive"]}
rand_new = {package="rand", version="0.8.5"}
rand = "0.4.6"
num = "0.4"
num-bigint = {version = "0.4", features = ["rand"]}
num-traits = "0.2.8"
blake2 = "0.10.6"
# blake-hash = {version="0.4.0", optional=true}
# blake = {version="2.0.1", optional=true}
generic-array = "0.14"
poseidon-rs = "0.0.8"
arrayref = "0.3.5"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
bytes = "1.4.0"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"


[[bench]]
name = "bench_babyjubjub"
harness = false

# [features]
# default = ["blake-hash"]
# aarch64 = ["blake"]
